--- a/content/work-history.yaml
+++ b/content/work-history.yaml
@@ -1,10 +1,14 @@
+- company: Vantis
+  position: Senior Full Stack Developer
+  period: 2021 - present
+
 - company: Yara Digital Hub
-  position: Senior Fullstack Developer / Team Lead
-  period: 2018 - present
+  position: Senior Full Stack Developer / Team Lead
+  period: 2018 - 2021
   # url: https://www.yara.com/
 
 - company: SoftServe
-  position: Fullstack Developer / Tech Lead
+  position: Full Stack Developer / Tech Lead
   period: 2015 - 2017
 
 - company: Epam Systems
