--- a/content/work-history.yaml
+++ b/content/work-history.yaml
@@ -1,5 +1,5 @@
 - company: Vantis
-  position: Senior Full Stack Developer
+  position: Senior Full Stack / Tech Lead Engineer
   period: 2021 - present
 
 - company: Yara Digital Hub
